--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,26 @@
     <string name="app_name">HorarioTareas</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="aceptar">Aceptar</string>
+    <string name="TITULO" />
+    <string name="DescripcionTarea" />
+    <string name="FECHA" />
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="cancelar" />
+    <string name="descripciontarea">DescripcionTarea</string>
+    <string name="fecha">FECHA</string>
+    <string name="titulo">TITULO</string>
+    <string name="titulo1">TITULO</string>
+    <string name="fecha1">FECHA</string>
+    <string name="descripciontarea1">DescripcionTarea</string>
+    <string name="aceptar1">Aceptar</string>
+    <string name="aceptar2">Aceptar</string>
+    <string name="cancelar1">Cancelar</string>
+    <string name="_3">3</string>
+    <string-array name="turtle_names">
+        <item>leo</item>
+        <item>raf</item>
+        <item>mikey</item>
+    </string-array>
 </resources>
